Implements POST /api/adb/reboot, Fixes problem to show/update unneeded result view
