# api/openapi.yaml
@@ -73,6 +73,38 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemDetails"            
+  /api/adb/reboot:
+    post:
+      summary: Execute adb reroot command and report result.
+      description: CommandResults is used for data within SSE response.
+      operationId: ExecuteAdbReboot
+      parameters:
+        - name: args
+          description: Command arguments.
+          in: query
+          required: false
+          style: form
+          explode: false
+          schema:
+            $ref: "#/components/schemas/RebootArgs"
+          example: bootloader
+      requestBody:
+        $ref: "#/components/requestBodies/TargetList"
+      responses:
+        '200':
+          $ref: "#/components/responses/SSEResponse"
+        '400':
+          description: Bad Request.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"
+        '500':
+          description: Internal Server Error.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemDetails"  
   /api/adb/root:
     post:
       summary: Execute adb root command and report result.
@@ -186,6 +218,14 @@ components:
       type: array
       items:
         type: string
+    RebootArgs:
+      description: argument list for adb reboot.
+      type: string
+      enum:
+        - bootloader
+        - recovery
+        - sideload
+        - sideload-auto-reboot
     CommandResult:
       description: Command result with serial.
       type: object
