# internal/adapter/handler/echo_handler.go
@@ -101,7 +101,7 @@ func (h *EchoHandler) ExecuteAdbShell(ctx echo.Context, params api.ExecuteAdbShe
 	slog.Debug("EchoHandler::ExecuteAdbShell", "params", params, "body", body)
 
 	// convert to domain (with validate)
-	args := controller.CommandArgsToComain(&params.Args)
+	args := controller.CommandArgsToDomain(&params.Args)
 	targets, err := controller.SerialListToDomain(body)
 	if err != nil {
 		return ctx.JSON(http.StatusBadRequest, apiconv.MakeBadRequest(err))
@@ -111,6 +111,51 @@ func (h *EchoHandler) ExecuteAdbShell(ctx echo.Context, params api.ExecuteAdbShe
 	exec := service.NewMultiCommand()
 	for _, serial := range targets {
 		cmd := infra.NewAdbCommandWithSerial(domain.CommandShell, serial, args...)
+		exec.Add(serial, cmd)
+	}
+
+	// prepare reporter
+	reporter := presenter.NewSSEReporter(ctx.Response())
+
+	// start command
+	ch := exec.Start(ctx.Request().Context())
+	for {
+		result, ok := <-ch
+		if !ok {
+			reporter.ReportClose()
+			break
+		}
+		if err := reporter.ReportCommandResult(result); err != nil {
+			slog.Error("command result report error", "err", err, "result", result)
+			return nil
+		}
+	}
+
+	return nil
+}
+
+// ExecuteAdbReboot Execute adb reroot command and report result.
+// (POST /api/adb/reboot)
+func (h *EchoHandler) ExecuteAdbReboot(ctx echo.Context, params api.ExecuteAdbRebootParams) error {
+	// bind body
+	var body api.ExecuteAdbRootJSONRequestBody
+	if err := ctx.Bind(&body); err != nil {
+		return ctx.JSON(http.StatusBadRequest, apiconv.MakeBadRequest(err))
+	}
+
+	slog.Debug("EchoHandler::ExecuteAdbReboot", "body", body)
+
+	// convert to domain (with validate)
+	args := controller.RebootArgsToDomain(params.Args)
+	targets, err := controller.SerialListToDomain(body)
+	if err != nil {
+		return ctx.JSON(http.StatusBadRequest, apiconv.MakeBadRequest(err))
+	}
+
+	// parepare commands
+	exec := service.NewMultiCommand()
+	for _, serial := range targets {
+		cmd := infra.NewAdbCommandWithSerial(domain.CommandReboot, serial, args...)
 		exec.Add(serial, cmd)
 	}
 
